# coqui-runtime

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  bootsel.sh  cmake_install.cmake  debugprobe_16mb.cfg  deploy.sh  hardware.c  hardware.h  main.c  pbcopy  rebuild.sh  rp2040_16mb.cfg  stubs.c
